@@ -393,7 +393,7 @@ final class StandardDirectoryReader extends DirectoryReader {
       segmentsFileName = infos.getSegmentsFileName();
       this.dir = dir;
       userData = infos.getUserData();
-      files = Collections.unmodifiableCollection(infos.files(dir, true));
+      files = Collections.unmodifiableCollection(infos.files(true));
       generation = infos.getGeneration();
       segmentCount = infos.size();
     }
